* Changed logging correlation to be on by default. This change includes the removal of the now redundant `enable_log_correlation` config
option. If there's a need to disable the log correlation mechanism, this can be done now through the `disable_instrumentations` config -
{pull}2428[#2428]
* Added automatic error event capturing for log4j1 and JBoss LogManager - {pull}2428[#2428]

[float]
===== Performance improvements
* Proxy classes are excluded from instrumentation in more cases - {pull}2474[#2474]
* Only time type/method matching if the debug logging is enabled as the results are only used when debug logging is enabled - {pull}2471[#2471]

[float]
===== Bug fixes
* Fix cross-plugin dependencies triggering NoClassDefFound - {pull}2509[#2509]
* Fix status code setting in AWS Lambda transactions triggered by API Gateway V1 - {pull}2346[#2346]
* Fix classloading OSGi bundles with partial dependency on Servlet API + avoid SecurityException with Apache Sling - {pull}2418[2418]
* Respect `transaction_ignore_urls` and `transaction_ignore_user_agents` when creating transactions in the spring webflux instrumentation - {pull}2515[#2515]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.29.0]]
==== 1.29.0 - 2022/02/09

[float]
===== Breaking changes
* Changes in service name auto-discovery of jar files (see Features section)

[float]
===== Features
* Exceptions that are logged using the fatal log level are now captured (log4j2 only) - {pull}2377[#2377]
* Replaced `authorization` in the default value of `sanitize_field_names` with `*auth*` - {pull}2326[#2326]
* Unsampled transactions are dropped and not sent to the APM-Server if the APM-Server version is 8.0+ - {pull}2329[#2329]
* Adding agent logging capabilities to our SDK, making it available for external plugins - {pull}2390[#2390]
* Service name auto-discovery improvements
** For applications deployed to application servers (`war` files) and standalone jars that are started with `java -jar`,