@@ -20,6 +20,6 @@ package co.elastic.apm.test;
 
 public class Main {
 
-    public static void main(String[] args) throws InterruptedException {
+    public static void main(String[] args) {
     }
 }
